--- a/index.html
+++ b/index.html
@@ -1,145 +1,144 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <meta charset="UTF-8">
-  <title>CSS Timeline</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+	<meta charset="UTF-8">
+	<title>Shrinkit - Austin</title>
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="icon" type="image/x-icon" href="shrinkit.svg">
 </head>
 
 <body>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
-  
-<!-- The Timeline -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
 
-<ul class="timeline">
+	<!-- <img height="200px" width="300px" margin-bottom="-125%" margin-left="-20%" src="shrinkit.svg" alt="Shrinkit!"> -->
 
-	<!-- Item 1 -->
-	<li>
-		<div class="direction-r">
-			<div class="flag-wrapper">
-				<span class="flag">Kick Off</span>
-				<span class="time-wrapper"><span class="time">27th April, 10:30am</span></span>
-			</div>
-			<!-- <div class="desc">My current employment. Way better than the position before!</div> -->
-		</div>
-	</li>
-  
-	<!-- Item 2 -->
-	<li>
-		<div class="direction-l">
-			<div class="flag-wrapper">
-				<span class="flag">Lunch</span>
-				<span class="time-wrapper"><span class="time">27th April, 12:30pm</span></span>
-			</div>
-		</div>
-	</li>
+	<!-- The Timeline -->
+	<div>
+		<ul class="timeline">
 
-	<!-- Item 3 -->
-	<li>
-		<div class="direction-r">
-			<div class="flag-wrapper">
-				<span class="flag">Tech Talks</span>
-				<span class="time-wrapper"><span class="time">27th April, 2:00pm</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 1 -->
+			<li>
+				<div class="direction-r">
+					<div class="flag-wrapper">
+						<span class="flag">Kick Off</span>
+						<span class="time-wrapper"><span class="time">27th April, 10:30am</span></span>
+					</div>
+					<!-- <div class="desc">My current employment. Way better than the position before!</div> -->
+				</div>
+			</li>
+		
+			<!-- Item 2 -->
+			<li>
+				<div class="direction-l">
+					<div class="flag-wrapper">
+						<span class="flag">Lunch</span>
+						<span class="time-wrapper"><span class="time">27th April, 12:30pm</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 4 -->
-	<li>
-		<div class="direction-l">
-			<div class="flag-wrapper">
-				<span class="flag">Game Time</span>
-				<span class="time-wrapper"><span class="time">27th April, 3:00pm</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 3 -->
+			<li>
+				<div class="direction-r">
+					<div class="flag-wrapper">
+						<span class="flag">Tech Talks</span>
+						<span class="time-wrapper"><span class="time">27th April, 2:00pm</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 5 -->
-	<li>
-		<div class="direction-r">
-			<div class="flag-wrapper">
-				<span class="flag">Evening Snacks</span>
-				<span class="time-wrapper"><span class="time">27th April, 6:00pm</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 4 -->
+			<li>
+				<div class="direction-l">
+					<div class="flag-wrapper">
+						<span class="flag">Game Time</span>
+						<span class="time-wrapper"><span class="time">27th April, 3:00pm</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 6 -->
-	<li>
-		<div class="direction-l">
-			<div class="flag-wrapper">
-				<span class="flag">Dinner</span>
-				<span class="time-wrapper"><span class="time">27th April, 8:00pm</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 5 -->
+			<li>
+				<div class="direction-r">
+					<div class="flag-wrapper">
+						<span class="flag">Evening Snacks</span>
+						<span class="time-wrapper"><span class="time">27th April, 6:00pm</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 7 -->
-	<li>
-		<div class="direction-r">
-			<div class="flag-wrapper">
-				<span class="flag">Midnight Snacks</span>
-				<span class="time-wrapper"><span class="time">28th April, 12:00am</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 6 -->
+			<li>
+				<div class="direction-l">
+					<div class="flag-wrapper">
+						<span class="flag">Dinner</span>
+						<span class="time-wrapper"><span class="time">27th April, 8:00pm</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 8 -->
-	<li>
-		<div class="direction-l">
-			<div class="flag-wrapper">
-				<span class="flag">Breakfast</span>
-				<span class="time-wrapper"><span class="time">28th April, 9:00am</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 7 -->
+			<li>
+				<div class="direction-r">
+					<div class="flag-wrapper">
+						<span class="flag">Midnight Snacks</span>
+						<span class="time-wrapper"><span class="time">28th April, 12:00am</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 9 -->
-	<li>
-		<div class="direction-r">
-			<div class="flag-wrapper">
-				<span class="flag">Hack Ends</span>
-				<span class="time-wrapper"><span class="time">28th April, 11:00am</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 8 -->
+			<li>
+				<div class="direction-l">
+					<div class="flag-wrapper">
+						<span class="flag">Breakfast</span>
+						<span class="time-wrapper"><span class="time">28th April, 9:00am</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 10 -->
-	<li>
-		<div class="direction-l">
-			<div class="flag-wrapper">
-				<span class="flag">Presentations</span>
-				<span class="time-wrapper"><span class="time">28th April, 11:30am</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 9 -->
+			<li>
+				<div class="direction-r">
+					<div class="flag-wrapper">
+						<span class="flag">Hack Ends</span>
+						<span class="time-wrapper"><span class="time">28th April, 11:00am</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 11 -->
-	<li>
-		<div class="direction-r">
-			<div class="flag-wrapper">
-				<span class="flag">Voting Ends</span>
-				<span class="time-wrapper"><span class="time">28th April, 12:00pm</span></span>
-			</div>
-		</div>
-	</li>
+			<!-- Item 10 -->
+			<li>
+				<div class="direction-l">
+					<div class="flag-wrapper">
+						<span class="flag">Presentations</span>
+						<span class="time-wrapper"><span class="time">28th April, 11:30am</span></span>
+					</div>
+				</div>
+			</li>
 
-	<!-- Item 12 -->
-	<li>
-		<div class="direction-l">
-			<div class="flag-wrapper">
-				<span class="flag">Results</span>
-				<span class="time-wrapper"><span class="time">28th April, 12:30pm</span></span>
-			</div>
-		</div>
-	</li>
-  
-</ul>
+			<!-- Item 11 -->
+			<li>
+				<div class="direction-r">
+					<div class="flag-wrapper">
+						<span class="flag">Voting Ends</span>
+						<span class="time-wrapper"><span class="time">28th April, 12:00pm</span></span>
+					</div>
+				</div>
+			</li>
+
+			<!-- Item 12 -->
+			<li>
+				<div class="direction-l">
+					<div class="flag-wrapper">
+						<span class="flag">Results</span>
+						<span class="time-wrapper"><span class="time">28th April, 12:30pm</span></span>
+					</div>
+				</div>
+			</li>
+		
+		</ul>
+	</div>
   
   
 </body>
