--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
 	<meta charset="UTF-8">
-	<meta name="clue" content="There are 2 most important things in life, one is commitment and other is change">
+	<meta name="clue" content="In this ever changing world, there is one just constant and thats commitment">
 	<title>Shrinkit - Austin</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="icon" type="image/x-icon" href="shrinkit.svg">
